fix: align issue in contact

--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -31,3 +31,7 @@
   font-family: "Arimo", sans-serif;
   font-weight: bolder;
 }
+
+h4 {
+  text-align: center;
+}
